# media

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  media.service  service.nomad
.github/workflows/: deploy-dev.yaml  deploy-main.yaml
migrations/: V10__media_subscriptions_add_buyer_user_id_offer_id_unique.sql  V11__medias_add_filename.sql  V12__medias_offers_add_ordering.sql  V13__media_subscriptions_add_cancel_at.sql  V14__sub_shops.sql  V15__sub_offers.sql  V1__medias.sql  V2__medias_offers.sql  V3__medias_offers_add_user_id.sql  V4__medias_quota.sql  V5__medias_add_size.sql  V6__media_subscriptions.sql  V7__media_subscriptions_add_payed_until.sql  V8__medias_rename_market_booth_id.sql  V9__media_subscriptions_add_shop_id_stripe_id_canceled_at.sql
src/: auth.rs  commerce.rs  credentials.rs  db.rs  files.rs  lib.rs  main.rs  payment.rs  quota.rs
src/api/: FILE_DESCRIPTOR_SET  mod.rs  peoplesmarkets.commerce.v1.rs  peoplesmarkets.media.v1.rs  peoplesmarkets.payment.v1.rs  sited_io.commerce.v1.rs  sited_io.media.v1.rs  sited_io.payment.v1.rs
src/model/: media.rs  media_offer.rs  media_quota.rs  media_subscription.rs  mod.rs  sub_offers.rs  sub_shops.rs
src/services/: media.rs  media_subscription.rs  mod.rs
src/subscribers/: mod.rs  offer.rs  shop.rs  subscription.rs
