[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "0.56.1", default-features = false, features = [
  "rt-tokio",
] }
aws-credential-types = { version = "0.56.1", default-features = false, features = [
  "hardcoded-credentials",
] }
aws-sdk-s3 = { version = "0.30.0", features = [
  "rt-tokio",
  "rustls",
], default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
deadpool-postgres = { version = "0.10.5", default-features = false, features = [
  "rt_tokio_1",
] }
http = { version = "0.2.9", default-features = false }
jwtk = { version = "0.3.0", default-features = false, features = [
  "remote-jwks",
] }
openssl = { version = "0.10.57", default-features = false, features = [
  "vendored",
] }
prost = { version = "0.12.0", default-features = false }
refinery = { version = "0.8.10", default-features = false, features = [
  "tokio-postgres",
] }
reqwest = { version = "0.11.20", default-features = false }
sea-query = { version = "0.30.1", default-features = false, features = [
  "derive",
  "backend-postgres",
] }
sea-query-postgres = { version = "0.4.0", default-features = false, features = [
  "with-uuid",
  "with-chrono",
] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
tokio = { version = "1.32.0", default-features = false, features = [
  "macros",
  "rt",
] }
tonic = { version = "0.10.0", default-features = false, features = [
  "transport",
  "tls",
  "tls-roots",
] }
tonic-health = { version = "0.10.0", default-features = false, features = [
  "transport",
] }
tonic-reflection = { version = "0.10.0", default-features = false }
tonic-web = { version = "0.10.0", default-features = false }
tower-http = { version = "0.4.4", default-features = false, features = [
  "cors",
  "trace",
] }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "tracing-log",
  "fmt",
] }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.10.0", default-features = false, features = [
  "prost",
  "transport",
] }
