[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.5", default-features = false, features = [
  "rt-tokio",
] }
aws-credential-types = { version = "1.2.1", default-features = false, features = [
  "hardcoded-credentials",
] }
aws-sdk-s3 = { version = "1.48.0", features = [
  "rt-tokio",
  "rustls",
], default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
deadpool-postgres = { version = "0.14.0", default-features = false, features = [
  "rt_tokio_1",
] }
fallible-iterator = "0.2.0"
http = { version = "1.1.0", default-features = false }
jwtk = { version = "0.3.0", default-features = false, features = [
  "remote-jwks",
] }
openssl = { version = "0.10.66", default-features = false, features = [
  "vendored",
] }
postgres-openssl = "0.5.0"
postgres-protocol = "0.6.7"
prost = { version = "0.13.2", default-features = false }
refinery = { version = "0.8.14", default-features = false, features = [
  "tokio-postgres",
] }
reqwest = { version = "0.11.27", default-features = false, features = ["json"] }
sea-query = { version = "0.30.0", default-features = false, features = [
  "derive",
  "backend-postgres",
] }
sea-query-postgres = { version = "0.4.0", default-features = false, features = [
  "with-uuid",
  "with-chrono",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tonic = { version = "0.12.2", default-features = false, features = [
  "transport",
  "tls",
  "tls-roots",
] }
tonic-health = { version = "0.12.2", default-features = false, features = [
  "transport",
] }
tonic-reflection = { version = "0.12.2" }
tonic-web = { version = "0.12.2", default-features = false }
tower-http = { version = "0.5.2", default-features = false, features = [
  "cors",
  "trace",
] }
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "tracing-log",
  "fmt",
] }
uuid = { version = "1.10.0", default-features = false, features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.12.2", default-features = false, features = [
  "prost",
  "transport",
] }
